--- a/style.css
+++ b/style.css
@@ -1,184 +1,7 @@
 @charset "UTF-8";
 
-/*基本色*/
-:root {
-
+body{
+    margin:0;
+    font-family:'メイリオ',
+                'Hiragino Kaku Gothic Pro',sans-serif;
 }
-
-/*基本設定：ページ全体*/
-body {
-	margin: 0;
-	font-family: 'メイリオ',
-		'Hiragino Kaku Gothic Pro',
-		sans-serif;
-}
-
-/*基本設定：フォントサイズ指定*/
-@media(max-width:599px){/*スマートフォン*/
-	:root{
-		font-size:14px;
-	}
-}
-
-@media(min-width:600px)and(max-width:799px){/*タブレット*/
-	:root{
-		font-size:16px;
-	}
-}
-
-@media(min-width:800px){/*web*/
-	:root{
-		font-size:18px;
-	}
-}
-
-/*ヘッダー*/
-header{
-	position: fixed;
-	top:0;
-	left:0;
-	z-index: 100;
-	width:100%;
-	background-color: rgba(255, 255, 255, 0.3);
-}
-
-header h1{
-	font-weight:normal;
-	margin:0;
-	display: inline-block;
-	line-height:70px;
-	padding-left:30px;
-	padding-right: 30px;
-	font-size: 36px;
-	text-decoration: none;
-}
-
-header h1 a{
-	text-decoration: none;
-	color:black;
-}
-
-header .container{
-	display:flex;
-	justify-content: space-between;
-}
-
-.menu-bar ul{
-	display:flex;
-
-}
-
-.menu-bar ul li {
-	list-style-type:none;
-	margin-left:30px;
-	font-size:24px;
-}
-
-.menu-bar ul li:last-child{
-	margin-right: 30px;
-}
-
-.menu-bar ul li a{
-	text-decoration:none;
-	color:black;
-}
-
-/*ヒーロー*/
-
-.top-wrapper{
-	display:flex;
-	align-items: center;
-	justify-content: center;
-    background-image:url(images/architectural-design-architecture-blue-sky-443378.jpg);
-    background-position:center;
-    background-size:cover;
-    width:100%;
-    height:100vh;
-}
-
-.top-wrapper h1{
-	margin-top: 0;
-	margin-bottom: 10px;
-	font-size: 7vw;
-	font-family: 'Noto Sans JP', sans-serif;
-	color:white;
-}
-
-/*メッセージ*/
-
-
-.message-wrapper h2{
-	font-weight:normal;
-	margin-top: 130px;
-	margin-bottom: 70px;
-	text-align: center;
-	font-size:40px;
-}
-
-.message-wrapper .message-text{
-	max-width:1000px;
-	text-align: left;
-	margin: 0 auto;
-	margin-bottom: 130px;
-}
-
-/*ニュース*/
-
-
-
-.news-wrapper{
-	background-color:white;
-	padding-bottom:40px;
-}
-
-.news-wrapper h2{
-	font-weight:normal;
-	margin:0;
-	padding-top:50px;
-	font-size:40px;
-	text-align:center; 
-}
-
-.news-list dl{
-	display:inline-block;
-	margin: 10px 0 0 0;
-}
-
-.news-list dl dt{
-	display:inline-block;
-	padding:10px;
-	color:white;
-	background-color:#495D63;
-	margin-left:20px;
-}
-
-.news-list dl dd {
-	line-height:47px;
-	border-bottom: 1px solid black;
-	
-}
-
-.news-list dl dd a {
-	text-decoration: none;
-	color:black;
-}
-
-
-@media(min-width:768px){
-	.news-list dl {
-		display: flex;
-		margin-bottom: 20px;
-	}
-
-	.news-wrapper h2{
-		text-align: center;
-		margin-bottom:70px;
-	}
-
-	.news-wrapper .news-list{
-		width:1000px;
-		margin:0 auto 0 auto;
-		padding-bottom:50px;
-	}
-}
-
